--- a/client/src/Login/Nav/Nav.css
+++ b/client/src/Login/Nav/Nav.css
@@ -47,8 +47,8 @@ span {
 /* Smartphones (portrait and landscape) ----------- */
 @media only screen and (min-width : 320px) and (max-width : 480px) {
     .register-button, .login-button{
-        height: 100px;
-        width: 100px;
+        height: 120px;
+        width: 120px;
     }
     span {
         font-size: 25px;
